# gribjump

./: .git-blame-ignore-revs  .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  todo.md  tox.ini
.github/: ci-config-pygribjump.yml  ci-config.yml  ci-hpc-config-pygribjump.yml  ci-hpc-config.yml
.github/workflows/: build-wheel-wrapper.yml  ci.yml
cmake/: FindAEC.cmake  compiler_warnings.cmake  find_python_module.cmake  run_pytest.sh.in
data/: synth11_ccsds_bitmap.grib2  synth11_ccsds_no_bitmap.grib2  synth11_simple_bitmap.grib2
pygribjump/: axestest.py  example_axes.py  example_extract.py  gribjump_c.h  pygribjump.py  requirements.txt  test.py
pygribjump.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pygribjump/src/pygribjump/: __init__.py  _version.py  axes-degradation.py  example_extract.py  gribjump_c.h  pygribjump.py
pygribjump/tests/: conftest.py  test_pygribjump.py  test_version.py
python/gribjumplib/: buildconfig  setup.cfg
python/pygribjump/src/pygribjump/: __init__.py  gribjump_c.h  pygribjump.py
python/pygribjump/tests/: conftest.py  test_pygribjump.py  test_version.py
scripts/: corrupted_scan.sh
src/: CMakeLists.txt
src/gribjump/: Bitmap.cc  Bitmap.h  CMakeLists.txt  Config.cc  Config.h  Engine.cc  Engine.h  ExtractionData.cc  ExtractionData.h  ExtractionItem.cc  ExtractionItem.h  FDBPlugin.cc  FDBPlugin.h  FDBService.cc  FDBService.h  Forwarder.cc  Forwarder.h  GribHandleData.cc  GribHandleData.h  GribInfo.cc  GribInfo.h  GribInfoCache.cc  GribInfoCache.h  GribJump.cc  GribJump.h  GribJumpBase.cc  GribJumpBase.h  GribJumpDataAccessor.h  GribJumpException.h  GribJumpFactory.cc  GribJumpFactory.h  Interval.h  JumpHandle.cc  JumpHandle.h  LibGribJump.cc  LibGribJump.h  LibGribjump.cc  LibGribjump.h  Lister.cc  Lister.h  (+21 more)
src/gribjump/api/: ExtractionIterator.h
src/gribjump/compression/: DataAccessor.h  NumericCompressor.h  Range.cc  Range.h
src/gribjump/compression/compressors/: Aec.cc  Aec.h  Ccsds.cc  Ccsds.h  Simple.cc  Simple.h  SimplePacking.cc  SimplePacking.h
src/gribjump/compression/compressors/algorithms/: LibEccodes.cc  LibEccodes.h  SimplePacking.h
src/gribjump/info/: CcsdsInfo.cc  CcsdsInfo.h  InfoAggregator.cc  InfoAggregator.h  InfoCache.cc  InfoCache.h  InfoExtractor.cc  InfoExtractor.h  InfoFactory.cc  InfoFactory.h  JumpInfo.cc  JumpInfo.h  JumpInfoFactory.cc  JumpInfoFactory.h  LRUCache.h  SimpleInfo.cc  SimpleInfo.h  UnsupportedInfo.cc  UnsupportedInfo.h
src/gribjump/jumper/: CcsdsJumper.cc  CcsdsJumper.h  Jumper.cc  Jumper.h  JumperFactory.cc  JumperFactory.h  SimpleJumper.cc  SimpleJumper.h
src/gribjump/remote/: ClientRequest.h  ExtractFileRequest.cc  ExtractFileRequest.h  ExtractRequest.cc  ExtractRequest.h  GribJumpServer.h  GribJumpService.h  GribJumpUser.cc  GribJumpUser.h  RemoteGribJump.cc  RemoteGribJump.h  Request.cc  Request.h  ScanRequest.cc  ScanRequest.h  WorkItem.cc  WorkItem.h  WorkQueue.cc  WorkQueue.h
src/gribjump/tools/: CMakeLists.txt  CompressedRequestTree.cc  CompressedRequestTree.h  EccodesExtract.cc  EccodesExtract.h  GribJumpTool.cc  GribJumpTool.h  ToolUtils.cc  ToolUtils.h  TreeEncodings.cc  TreeEncodings.h  index_tree.pb.cc  index_tree.pb.h
src/gribjump/tools/src/gribjump/tools/: index_tree.pb.cc  index_tree.pb.h
src/tools/: CMakeLists.txt  ToolUtils.h  compare_eccodes.cc  debug_clientside.cc  gj-cache.cc  gj-compare-eccodes.cc  gj-extract.cc  gj-server.cc  gj-test.c  grib-jump.cc  gribjump-dump-info.cc  gribjump-extract.cc  gribjump-info.cc  gribjump-old.cc  gribjump-scan-files.cc  gribjump-scan.cc  gribjump-server.cc  gribjump-validate.cc  infofromfile.cc
tests/: CMakeLists.txt  data.cc  path_tools.cc  test_O1280.cc  test_api.cc  test_api_axes.cc  test_c_api.cc  test_c_compile.c  test_cache.cc  test_compressed_tree.cc  test_compression.cc  test_engine.cc  test_engine_extract_from_paths.cc  test_gribinfo.cc  test_gribjump.cc  test_misc_units.cc  test_plugin.cc  test_protobuf_encoding.cc  test_serialiser.cc
tests/remote/: CMakeLists.txt  client.yaml  fdb_config.yaml.in  forwarding_client.yaml  server.yaml  server_forward.yaml  test_remote.cc  test_remote_forward.cc  test_server.sh.in  test_server_forward.sh.in
tests/tools/: CMakeLists.txt  callback_vs_scan.sh.in  gribjump-fdb.yaml  scan_corrupted.sh.in
