[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv -s"
testpaths = [
    "pygribjump/tests"
]

# pyproject.toml

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pygribjump"
description = "Python interface to GribJump"
readme = "README.md"
requires-python = ">=3.6"
dynamic = ["version"]
authors = [
    { name = "ECMWF", email = "software.support@ecmwf.int" }
]
urls = { "Home" = "https://github.com/ecmwf/gribjump" }
dependencies = [
    "cffi~=1.17",
    "numpy>=1.0",
    "pytest~=8.3",
    "setuptools~=75.1",
    "findlibs~=0.0.5",

]

[project.optional-dependencies]
dev = [
    "pyyaml",
    "pyfdb",
]

[tool.setuptools.dynamic]
version = { file = ["VERSION"] }

[tool.setuptools]
packages = ["pygribjump"]
package-dir = { "pygribjump" = "./pygribjump/src/pygribjump" }
include-package-data = true
zip-safe = false

# [tool.setuptools.package-data]
# "pygribjump" = ["VERSION"]

# [tool.setuptools.packages.find]
# where = ["."]

[tool.setuptools.package-data]
"pygribjump" = ["VERSION", "pygribjump/src/pygribjump/gribjump_c.h"]