[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv -s"
testpaths = [
    "./python/pygribjump/tests"
]

# pyproject.toml

[build-system]
requires = ["setuptools>=65", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pygribjump"
description = "Python interface to GribJump"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
authors = [
    { name = "ECMWF", email = "software.support@ecmwf.int" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]
urls = { "Home" = "https://github.com/ecmwf/gribjump" }
dependencies = [
    "cffi~=1.17",
    "numpy~=1.26",
    "pytest~=8.3",
    "findlibs~=0.1.1",
    "packaging>=20.0",
]

[project.optional-dependencies]
dev = [
    "pyyaml",
    "pyfdb",
]

[tool.setuptools.dynamic]
version = { file = ["VERSION"] }

[tool.setuptools]
packages = ["pygribjump"]
package-dir = { "pygribjump" = "./python/pygribjump/src/pygribjump" }
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"pygribjump" = [
    "VERSION", 
    "gribjump_c.h"
]
